Bug 832696 - gfx gets prefs in the plugin process r=jmuizelaar